--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav">
                             <li class="nav-item active">
-                                <a class="nav-link" href="index.html">Home</a>
+                                <a class="nav-link" href="{% url 'index' %}">Home</a>
                             </li>
 
                             <!--<li class="nav-item">
@@ -106,7 +106,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="contact-us.html">contact</a>
+                                <a class="nav-link" href="{% url 'contact' %}">contact</a>
                             </li>
                         </ul>
                     </div>
