--- a/templates/index.html
+++ b/templates/index.html
@@ -1289,7 +1289,7 @@
                             <li><a data-cursor="pointer" href="{% url 'index' %}">Home</a></li>
 <!--                             <li><a data-cursor="pointer" href="service.html">Service</a></li>
                             <li><a data-cursor="pointer" href="pricing.html">Pricing</a></li> -->
-                            <li><a data-cursor="pointer" href="{% url 'forgot1' %}">Contact us</a></li>
+                            <li><a data-cursor="pointer" href="{% url 'contact' %}">Contact us</a></li>
                         </ul>
                     </div>
                 </div>
